Closed Bug 1035248 Opened 10 years ago Closed 9 years ago

"ASSERTION: Unexpected call" in nsCSSFrameConstructor::ConstructTable with SVG mime type, dynamic { HTML element with display:table-column-group }

Categories

(Core :: Layout, defect)

x86_64
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla40
Tracking Status
firefox40 --- fixed

People

(Reporter: jruderman, Assigned: bzbarsky)

References

Details

(Keywords: assertion, regression, testcase)

Attachments

(4 files)

Attached image testcase
###!!! ASSERTION: Unexpected call: 'aDisplay->mDisplay == 8 || aDisplay->mDisplay == 9', file layout/base/nsCSSFrameConstructor.cpp, line 1959

This testcase seems like a dynamic version of bug 1016145.
Attached file stack
Jet has requested a regression range. Marking QAWANTED.
Keywords: qawanted
This is almost certainly a regression from bug 1013936, no?  That's why it has the dependency marked.
I spoke with Jet about this bug offline. In his opinion, this isn't important enough to track. As such, dropping tracking.
Attached image testcase 2
###!!! ASSERTION: Unexpected call: 'aDisplay->mDisplay == 8 || aDisplay->mDisplay == 9', file layout/base/nsCSSFrameConstructor.cpp, line 1982

###!!! ASSERTION: How did this produce an nsTableRowGroupFrame?: 'Not Reached', file layout/tables/nsTableFrame.cpp, line 2747
Assignee: nobody → bzbarsky
Status: NEW → ASSIGNED
Comment on attachment 8591712 [details] [diff] [review]
Fix SVG document bits to correctly handle non-SVG elements being added

Review of attachment 8591712 [details] [diff] [review]:
-----------------------------------------------------------------

Ah, makes sense, thanks bz!
Attachment #8591712 - Flags: review?(jwatt) → review+
Flags: needinfo?(jwatt)
https://hg.mozilla.org/mozilla-central/rev/b488a6f9ddc2
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla40
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: