Bug 1035248.  Fix SVG document bits to correctly handle non-SVG elements being added.  r=jwatt